# vault-mcp

./: .gitignore  CONFIGURATION.md  CONTRIBUTING.md  README.md  constraints.txt  install_deps.sh  pyproject.toml
components/agentic_retriever/: __init__.py  agentic_retriever.py  logging_handler.py
components/agentic_retriever/tests/: test_static_postprocessor.py
components/api_app/: __init__.py  main.py  models.py
components/api_app/tests/: __init__.py  test_main.py
components/document_processing/: __init__.py  document_loader.py  document_reader.py  document_tools.py  node_converter.py  obsidian_reader_with_filter.py
components/document_processing/tests/: __init__.py  test_document_loader.py  test_document_reader.py  test_document_tools.py  test_obsidian_reader_with_filter.py  test_quality_scorer.py
components/embedding_system/: custom_embedding.py  embedding_factory.py
components/embedding_system/tests/: __init__.py  test_embedding_system.py
components/file_watcher/: file_watcher.py
components/mcp_app/: main.py
components/mcp_server/: main.py  models.py
components/vault_service/: main.py  models.py
components/vector_store/: vector_store.py
config/: app.toml  prompts.toml  templates.yaml
config/examples/: agentic_mode_example.toml
data/: index_state.json
docs/: WRAP_UP_SUMMARY.md  future_changes.md  plan.md
docs/.assets/: transcript.md
docs/components/: agentic_retriever.md  configurable-post-processing.md  document-processing.md  embedding-system.md  file-watcher.md  mcp-server.md  retrieval-post-processing.md  vector-store.md
docs/implementation/: configurable-post-processing.md  filter-then-load.md
plugins/: e5_instruct_wrapper.py
shared/: config.py  initializer.py  state_tracker.py
shared/tests/: test_state_tracker.py
tests/: conftest.py  test_agentic_retriever.py  test_config.py  test_custom_embedding.py  test_document_processor.py  test_document_tools.py  test_embedding_factory.py  test_integration.py  test_query_limit_and_indices.py  test_retrieval_config.py  test_vault_mcp.py
vault_mcp/: __init__.py  config.py  document_processor.py  document_tools.py  embedding_factory.py  main.py
(+122 files in other folders)
